gitops/espresso/infrastructure/configs/cert-manager/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  endpointSelector: {}
  ingress:
    # Kubelet probes and kube-apiserver webhook calls
    - fromEntities:
        - host
        - remote-node
        - kube-apiserver
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    # Kubernetes API for cert management
    - toEntities:
        - kube-apiserver
    # ACME challenges (Let's Encrypt)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
